--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,85 @@
-.App {
+* {
+  padding: 0;
+  margin: 0;
+}
+
+.product{
+  background-color: lightgray;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.bodyTienda{
+  padding-left: 50px;
+  background-image: url('./components/cards/gamer.jpg');
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.body-inicio{
+  padding-left: 30px;
+  padding-right: 30px;
+  background-image: url('./components/cards/gamer.jpg');
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.inicio {
+  background-image: url('./components/cards/gamer.jpg');
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr ;
+  gap: 45px;
+  justify-items: center;
+  margin-top: 50px;
+  margin-bottom: 45px;
+}
+
+#nav-item{
+  margin-left: 10px;
+  color: black;
+}
+
+#boton{
+  display: inline-block;
+  width: 90px;
+  height: 50px;
+  margin-left: 10px;
+}
+
+#boton2{
+  display: inline-block;
+  width: 100px;
+  height: 60px;
+  padding: 9px;
+  margin-left: 10px;
+}
+
+.letras{
   color: white;
+  padding-bottom: 6px;
 }
 
-.App-link {
-  color: #61dafb;
+.titulos {
+  color: white;
+  height: 45px;
+  width: 270px;
+  transition: all 2s;
+  margin-top: 49px;
+  margin-right: auto;
+  margin-bottom: 20px;
+  margin-left: auto;
+  text-align: center;
+  font-weight: bolder;
+  font-size: 25px;
+}
+.titulos:hover {
+  transform: scale(1.5);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.padre {
+  background-image: url('./components/cards/gamer.jpg');
+  color: white;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr;
+  gap: 45px;
+  justify-items: center;
+  margin-top: 50px;
+
 }
